--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
-                <span class="d-block d-lg-none">Didarul Islam</span>
+                <span class="d-block d-lg-none">Maria Sultana</span>
                 <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profile.jpg" alt="..." /></span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
@@ -47,13 +47,13 @@
                         176 Power House More · Khulna, Bangladesh · +8801623584333 ·
                         <a href="mariasultana215@gmail.com">mariasultana215@gmail.com</a>
                     </div>
-                    <p class="lead mb-5">Hey, Myself Maria Sultana, an enthusiastic and passionate content writer, PowerPoint designer and GIS specialist. A warm welcome to my profile.
+                    <p class="lead mb-5">I'm an enthusiastic and passionate content writer, PowerPoint designer and GIS specialist. A warm welcome to my profile.
 I'm just a newbie in this platform yet I've vast experience on my mentioned expertise fields. After successfully publishing my research articles in different international conferences and journals, winning prizes on Content writing, getting appreciations on my presentation slides and nearly 5 years of academic experience on GIS based activities I've finally achieved my confidence to provide service in this platform, I want to Utilize the attained knowledges and deliver best results to my clients.</p>
                     <div class="social-icons">
-                        <a class="social-icon" href="https://www.linkedin.com/in/md-didarul-islam893/"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="social-icon" href="https://github.com/didarul-csiss"><i class="fab fa-github"></i></a>
-                        <a class="social-icon" href="https://scholar.google.com/citations?user=MvKr4agAAAAJ&hl=en"><i class="fab fa-google"></i></a>
-                        <a class="social-icon" href="https://www.researchgate.net/profile/Md-Didarul-Islam-3"><i class="fa-brands fa-researchgate"></i></a>
+                        <a class="social-icon" href="https://www.linkedin.com/in/maria-sultana-9946b3256/"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="social-icon" href="https://github.com/MariaSithi"><i class="fab fa-github"></i></a>
+                        <a class="social-icon" href="https://scholar.google.com/citations?user=6FXLVY0AAAAJ&hl=en"><i class="fab fa-google"></i></a>
+                        <a class="social-icon" href="https://www.researchgate.net/profile/Maria-Sithi"><i class="fa-brands fa-researchgate"></i></a>
                     </div>
                 </div>
             </section>
@@ -70,14 +70,7 @@ I'm just a newbie in this platform yet I've vast experience on my mentioned expe
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">August 2021 - Present</span></div>
                     </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">Graduate Assistant</h3>
-                            <div class="subheading mb-3">Central Michigan University</div>
-                            <p>• Spatial statistical data modeling <br>• Grading and instructing online courses <br>•	Assisted workshop on ArcGIS Online <br>•	Assisted lab GEO 303: Geographic Information Science</p>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2019 - May 2021</span></div>
-                    </div>
+                  
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Research Assistant</h3>
