--- a/index.html
+++ b/index.html
@@ -47,14 +47,26 @@
                         176 Power House More · Khulna, Bangladesh · +8801623584333 ·
                         <a href="mariasultana215@gmail.com">mariasultana215@gmail.com</a>
                     </div>
-                    <p class="lead mb-5">I'm an enthusiastic and passionate content writer, PowerPoint designer and GIS specialist. A warm welcome to my profile.
-I'm just a newbie in this platform yet I've vast experience on my mentioned expertise fields. After successfully publishing my research articles in different international conferences and journals, winning prizes on Content writing, getting appreciations on my presentation slides and nearly 5 years of academic experience on GIS based activities I've finally achieved my confidence to provide service in this platform, I want to Utilize the attained knowledges and deliver best results to my clients.</p>
+                    <p class="lead mb-5">I'm an enthusiastic and passionate GIS specialist. A warm welcome to my profile.
+I'm just a forever learner yet I've vast experience on my mentioned expertise fields. After successfully publishing my research articles in different international conferences and journals, winning prizes on Content writing, getting appreciations on my presentation slides and nearly 5 years of academic experience on GIS based activities I've finally achieved my confidence to provide service in this platform, I want to Utilize the attained knowledges and deliver best results to my clients.</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/maria-sultana-9946b3256/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/MariaSithi"><i class="fab fa-github"></i></a>
                         <a class="social-icon" href="https://scholar.google.com/citations?user=6FXLVY0AAAAJ&hl=en"><i class="fab fa-google"></i></a>
                         <a class="social-icon" href="https://www.researchgate.net/profile/Maria-Sithi"><i class="fa-brands fa-researchgate"></i></a>
                     </div>
+                </div>
+            </section>
+            <hr class="m-0" />
+            <!-- Research Interests-->
+            <section class="resume-section" id="interests">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Research Interests</h2>
+                    <p> Spatial Statistics & Geostatistical Data Modelling</p>
+                    <p> Application of GIS, RS & Machine Learning in Real-Estate Data Modelling</p>
+                    <p> Application of GIS & RS in Urban Science & Climate Change Modelling</p>
+                    <p> Human Environment Interaction & Land-use dynamics</p>
+                     <p> Application of GIS, RS & Machine Learning in Environmental Impact Modelling</p>
                 </div>
             </section>
             <hr class="m-0" />
