--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Research Articles</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Research Articles">Research Articles</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Awards">Awards</a></li>
                 </ul>
             </div>
         </nav>
@@ -172,6 +173,15 @@ I'm just a forever learner yet I've vast experience on my mentioned expertise fi
                     </ul>
                 </div>
             </section>
+            <!-- Interests-->
+            <section class="resume-section" id="Awards">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Awards</h2>
+                    <p>1st Runners Up in Content Writing: Greater Rangpur Dinajpur Association, Khulna University.</p>
+   
+                </div>
+            </section>
+            <hr class="m-0" />
         </div>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
