--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav">
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Research Interests">Research Interests</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#ResearchInterests">Research Interests</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Research Articles">Research Articles</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Publications">Publications</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Awards">Awards</a></li>
                 </ul>
             </div>
@@ -61,7 +61,7 @@ I'm just a forever learner yet I've vast experience on my mentioned expertise fi
             </section>
             <hr class="m-0" />
             <!-- Research Interests-->
-            <section class="resume-section" id="interests">
+            <section class="resume-section" id="ResearchInterests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Research Interests</h2>
                     <p> Spatial Statistics & Geostatistical Data Modelling</p>
@@ -138,7 +138,7 @@ I'm just a forever learner yet I've vast experience on my mentioned expertise fi
             </section>
             <hr class="m-0" />
             <!-- Awards-->
-            <section class="resume-section" id="awards">
+            <section class="resume-section" id="Publications">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Publications</h2>
                     <ul class="fa-ul mb-0">
