--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ I'm just a forever learner yet I've vast experience on my mentioned expertise fi
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
                     <p>Apart from being GIS Specialist, I enjoy most of my time being outdoors. During the warmer months, I enjoy hiking, climbing, kayaking, camping and travelling.</p>
-                    <p class="mb-0">When forced indoors, I listen to the orchestra, watch interesting historic events and archaeological discoveries, and read mystery and detective novels. I also love to explore new cultures and geography, and I spend a large amount of my free time exploring new tools & techniques in GIS, Remote Sensing, and Data Science domain.</p>
+                    <p class="mb-0">When forced indoors, I listen to the motivational podcasts, watch interesting historic events and archaeological discoveries, and read fiction and non-fiction books. I also love to collect qoutes from different books and popular sites, and I spend a large amount of my free time exploring new tools & techniques in GIS, Remote Sensing, and Data Science domain.</p>
                 </div>
             </section>
             <hr class="m-0" />
